# he-man-concrete

./: .gitignore  Cargo.toml  README.md  build.rs
demo/: README.md
evaluation/: benchmark.py  cryptonets.onnx  lenet5.onnx
evaluation/lfw_calibration-data/: 01002.npy  01003.npy  01004.npy  01006.npy  01007.npy  01010.npy  01011.npy  01014.npy  01015.npy  01016.npy  01017.npy  01018.npy  01019.npy  01020.npy  01022.npy  01023.npy  01026.npy  01028.npy  01029.npy  01030.npy  01031.npy  01033.npy  01035.npy  01038.npy  01041.npy  01043.npy  01045.npy  01047.npy  01049.npy  01051.npy  01057.npy  01058.npy  01059.npy  01060.npy  01061.npy  01063.npy  01065.npy  01066.npy  01067.npy  01069.npy  (+544 more)
evaluation/lfw_data/: 0.npy  10.npy  104.npy  108.npy  109.npy  110.npy  112.npy  113.npy  115.npy  116.npy  117.npy  12.npy  120.npy  121.npy  122.npy  125.npy  126.npy  128.npy  129.npy  13.npy  130.npy  132.npy  133.npy  136.npy  137.npy  138.npy  14.npy  140.npy  141.npy  142.npy  143.npy  144.npy  145.npy  148.npy  149.npy  15.npy  150.npy  152.npy  153.npy  156.npy  (+546 more)
evaluation/lfw_verification/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  106.npy  107.npy  109.npy  11.npy  110.npy  111.npy  113.npy  115.npy  116.npy  117.npy  118.npy  12.npy  121.npy  122.npy  123.npy  124.npy  125.npy  13.npy  (+770 more)
scripts/: generate_test_models.py
src/: autopad.rs  broadcast.rs  calibrate.rs  cfg.rs  decrypt.rs  encrypt.rs  execute.rs  inference.rs  io.rs  key.rs  main.rs  multiindex.rs  onnxengine.rs  onnxgetters.rs  tensor.rs  tensorcover.rs
tests/: test_inference.rs
(+21 files in other folders)
