[package]
name = "he-man-concrete"
version = "0.1.0"
edition = "2021"

[dependencies]
concrete = { git = "https://github.com/zama-ai/concrete", rev = "945fe6d" }
itertools = "0.10.1"
anyhow = "1.0.8"
csv = "1.1"
rand = "0.8.4"
clap = { version = "3.0", features = ["derive"] }
bytes = "1.1.0"
prost = "0.9.0"
tool = "0.2.1"
permutation = "0.4.0"
bincode = "1.3.3"
npyz = { version = "0.6.1", features = ["npz"] }
serde = { version = "1.0.138", features = ["derive"] }
num = "0.4.0"

[build-dependencies]
prost-build = { version = "0.9.0" }

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0.4"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3
lto = "fat"
codegen-units = 1
